Fixed issues with layout ("createLogin" was positioned slightly below "createAccount" instead of being aligned horizontally).

--- a/src/main/resources/static/css/adminCreateUserAccount.css
+++ b/src/main/resources/static/css/adminCreateUserAccount.css
@@ -7,15 +7,6 @@
     margin-bottom: -10px;
 }
 
-#createAccountButton {
-    margin-bottom: 5px;
-    margin-top: 10px;
-    width: 18%;
-    min-width: 90px;
-    position: center;
-    text-align: center !important;
-}
-
 .form-control {
     font-size: 14px;
 }
@@ -25,23 +16,22 @@
     margin-top: 5px;
 }
 
-h1 {
+h2 {
     margin-top: 20px;
 }
 
-.form-group {
-    margin-top: 4%;
-    margin-bottom: 2%;
+#createAccount {
+    margin-top: 48px;
+}
+
+#createRole {
+    margin-top: 48px;
 }
 
 #createAccountButton {
     width: 30%;
     min-width: 120px;
-}
-
-#createRoleButton {
-    width: 30%;
-    min-width: 120px;
+    margin-top: 20px;
 }
 
 #inputFieldsForm {
@@ -62,7 +52,10 @@ h1 {
 
 #createRoleButton {
     margin-top: 20px;
+    width: 30%;
+    min-width: 120px;
 }
+
 @media (min-width: 768px) {
     #createRole {
         border-left: 1px solid lightgray;
@@ -73,7 +66,6 @@ h1 {
         border-top: 1px solid lightgray;
     }
 }
-
 
 .form-check {
     margin-left: 2px;
